# GameGobler

./: .gitignore  Makefile  README.md  ROADMAP.md  gamegobler.spec  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml  test-build.yml
docs/: SIGNING.md  index.html
gamegobler/: __init__.py  config.py  cover_scraper.py  rom_parser.py  settings.py  transfer.py
gamegobler/api/: __init__.py  main.py  models.py
gamegobler/api/routers/: devices.py  library.py  sync.py
gamegobler/platform/: __init__.py  base.py  linux.py  macos.py  windows.py
packaging/: README.md  update-manifests.sh
packaging/flatpak/: com.github.dskarbrevik.GameGobler.desktop  com.github.dskarbrevik.GameGobler.metainfo.xml  com.github.dskarbrevik.GameGobler.yml
packaging/homebrew/: gamegobler.rb
packaging/winget/: dskarbrevik.GameGobler.installer.yaml  dskarbrevik.GameGobler.locale.en-US.yaml  dskarbrevik.GameGobler.yaml
tests/: test_api.py  test_cover_scraper.py  test_rom_parser.py  test_settings.py
web/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
web/e2e/: fixtures.ts  mock-api.ts
web/e2e/tests/: device-workflows.spec.ts  devices.spec.ts  error-states.spec.ts  file-browser.spec.ts  game-manager-advanced.spec.ts  game-manager.spec.ts  game-transfer.spec.ts  keyboard-a11y.spec.ts  library-advanced.spec.ts  library.spec.ts  navigation.spec.ts  product-gaps.spec.ts  settings.spec.ts  setup-wizard.spec.ts  toast-and-dialogs.spec.ts  visual-regression.spec.ts
web/src/: App.tsx  consoleIcons.ts  index.css  main.tsx  tauri.d.ts  utils.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/binaries/: gamegobler-api-aarch64-apple-darwin
web/src-tauri/capabilities/: default.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: lib.rs
web/src/__tests__/: App.test.tsx  DevicePanel.test.tsx  LibraryPanel.test.tsx  SettingsPanel.test.tsx  Toast.test.tsx  client.test.ts  consoleIcons.test.ts  utils.test.ts
web/src/api/: client.ts
web/src/components/: BackendGate.tsx  DeviceFilesPanel.tsx  DevicePanel.tsx  GameManagerPanel.tsx  LibraryPanel.tsx  SettingsPanel.tsx  SetupWizard.tsx  Toast.tsx  (+1 more)
(+2 files in other folders)
