[project]
name = "gamegobler"
version = "0.1.0"
description = "ROM library manager web app with device sync"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "rich>=13.0.0",
]

[project.scripts]
gamegobler-api = "gamegobler.api.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gamegobler"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.4",
]
